# jaconv

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  MANIFEST  MANIFEST.in  README.rst  README_JP.rst  genindex.html  index.html  jaconv.html  jctconv.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test_jaconv.py  test_jctconv.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
_modules/: index.html
_modules/jaconv/: jaconv.html
_sources/: index.rst.txt  jaconv.rst.txt
docs/: Makefile  conf.py  index.md  jaconv.md  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree  jaconv.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  jaconv.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  jaconv.html
docs/_build/html/_modules/jaconv/: jaconv.html
docs/_build/singlehtml/: .buildinfo  index.html  objects.inv
docs/_build/singlehtml/_static/: documentation_options.js
jaconv/: __init__.py  __init__.pyi  compat.py  compat.pyi  conv_table.py  conv_table.pyi  jaconv.py  jaconv.pyi
jaconvV2/: __init__.py  compat.py  conv_table.py  jaconv.py
jctconv/: __init__.py  compat.py  conv_table.py  jctconv.py
tests/: test_jaconv.py
