[metadata]
name = jaconv
version = attr: jaconv.__version__
license = MIT License
platforms = POSIX, Windows, Unix, MacOS
author = Yukino Ikegami
author_email = yknikgm@gmail.com
url = https://github.com/ikegami-yukino/jaconv
keywords =
    Japanese converter
    Japanese
    text preprocessing
    half-width kana
    Hiragana
    Katakana
    Hankaku
    Zenkaku
    transliteration
    Julius
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Text Processing

[options]
packages = jaconv

[options.package_data]
jaconv = py.typed, *.pyi
