[metadata]
name = jaconv
version = attr: jaconv.__version__
license = MIT License
platforms = POSIX, Windows, Unix, MacOS
author = Yukino Ikegami
author_email = yknikgm@gmail.com
url = https://github.com/ikegami-yukino/jaconv
keywords =
    Japanese converter
    Japanese
    text preprocessing
    half-width kana
    Hiragana
    Katakana
    Hankaku
    Zenkaku
    transliteration
    Julius
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Natural Language :: Japanese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Text Processing
    Topic :: Text Processing :: General

[options]
packages = jaconv

[options.package_data]
jaconv = py.typed, *.pyi

[tox:tox]
requires =
    tox>=4
env_list =
    format
    doc_format
    build
    3.14
    3.13
    3.12
    3.11
    3.10
    3.9
parallel_show_output = true

[testenv]
description = "run unit tests"
deps =
    pytest>=8
    pytest-sugar
commands = python test_jaconv.py

[testenv:format]
description = "install ruff in a virtual environment and invoke it"
deps = ruff>=0.14
skip_install = true
commands =
    ruff check --select I --diff --fix jaconv

[testenv:doc_format]
description = "Check rst format"
deps = readme-renderer[md]
skip_install = true
commands =
    python -m readme_renderer README.rst -o /dev/null
    python -m readme_renderer README_JP.rst -o /dev/null
    python -m readme_renderer CHANGES.rst -o /dev/null

[testenv:build]
description = "Build the package"
deps = build
commands =
    python -m build
